Only show appropriate security driver details

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -1559,7 +1559,7 @@
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkLabel" id="label515">
+                                              <widget class="GtkLabel" id="security-type-label">
                                                 <property name="visible">True</property>
                                                 <property name="xalign">1</property>
                                                 <property name="yalign">0</property>
