Don't mark hidden UI labels as translatable

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -673,7 +673,7 @@
                 <child>
                   <widget class="GtkLabel" id="label434">
                     <property name="visible">True</property>
-                    <property name="label" translatable="yes">Unavailable</property>
+                    <property name="label">Unavailable</property>
                   </widget>
                   <packing>
                     <property name="tab_fill">False</property>
@@ -832,7 +832,7 @@
                 <child>
                   <widget class="GtkLabel" id="label438">
                     <property name="visible">True</property>
-                    <property name="label" translatable="yes">Auth</property>
+                    <property name="label">Auth</property>
                   </widget>
                   <packing>
                     <property name="position">1</property>
@@ -864,7 +864,7 @@
                 <child>
                   <widget class="GtkLabel" id="label439">
                     <property name="visible">True</property>
-                    <property name="label" translatable="yes">VNC</property>
+                    <property name="label">Graphics</property>
                   </widget>
                   <packing>
                     <property name="position">2</property>
@@ -877,7 +877,7 @@
             <child>
               <widget class="GtkLabel" id="label420">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">Console</property>
+                <property name="label">Console</property>
               </widget>
               <packing>
                 <property name="tab_fill">False</property>
@@ -5161,7 +5161,7 @@ I/O:</property>
             <child>
               <widget class="GtkLabel" id="label41">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">Details</property>
+                <property name="label">Details</property>
               </widget>
               <packing>
                 <property name="position">1</property>
