details: Don't error if 'direct' iface doesn't have virtualport settings
Fix some cosmetic issues as well

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -3763,7 +3763,7 @@ I/O:</property>
                                   </packing>
                                 </child>
                                 <child>
-                                  <widget class="GtkExpander" id="virtualport-expander">
+                                  <widget class="GtkExpander" id="vport-expander">
                                     <property name="can_focus">True</property>
                                     <child>
                                       <widget class="GtkHBox" id="hbox1124">
@@ -3777,12 +3777,12 @@ I/O:</property>
                                             <property name="column_spacing">6</property>
                                             <property name="row_spacing">3</property>
                                             <child>
-                                              <widget class="GtkEntry" id="virtualport-instanceid">
+                                              <widget class="GtkEntry" id="vport-instanceid">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
                                                 <property name="invisible_char">●</property>
                                                 <property name="width_chars">40</property>
-                                                <signal name="changed" handler="on_virtualport-instanceid_changed"/>
+                                                <signal name="changed" handler="on_vport_instanceid_changed"/>
                                               </widget>
                                               <packing>
                                                 <property name="left_attach">1</property>
@@ -3793,7 +3793,7 @@ I/O:</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkLabel" id="virtualport-instanceid-label">
+                                              <widget class="GtkLabel" id="vport-instanceid-label">
                                                 <property name="visible">True</property>
                                                 <property name="xalign">1</property>
                                                 <property name="label" translatable="yes">Instance id:</property>
@@ -3807,11 +3807,11 @@ I/O:</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkEntry" id="virtualport-typeidversion">
+                                              <widget class="GtkEntry" id="vport-typeidversion">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
                                                 <property name="invisible_char">●</property>
-                                                <signal name="changed" handler="on_virtualport-typeidversion_changed"/>
+                                                <signal name="changed" handler="on_vport_typeidversion_changed"/>
                                               </widget>
                                               <packing>
                                                 <property name="left_attach">1</property>
@@ -3822,7 +3822,7 @@ I/O:</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkLabel" id="virtualport-typeidversion-label">
+                                              <widget class="GtkLabel" id="vport-typeidversion-label">
                                                 <property name="visible">True</property>
                                                 <property name="xalign">1</property>
                                                 <property name="label" translatable="yes">Typeid version:</property>
@@ -3836,11 +3836,11 @@ I/O:</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkEntry" id="virtualport-typeid">
+                                              <widget class="GtkEntry" id="vport-typeid">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
                                                 <property name="invisible_char">●</property>
-                                                <signal name="changed" handler="on_virtualport-typeid_changed"/>
+                                                <signal name="changed" handler="on_vport_typeid_changed"/>
                                               </widget>
                                               <packing>
                                                 <property name="left_attach">1</property>
@@ -3851,7 +3851,7 @@ I/O:</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkLabel" id="virtualport-typeid-label">
+                                              <widget class="GtkLabel" id="vport-typeid-label">
                                                 <property name="visible">True</property>
                                                 <property name="xalign">1</property>
                                                 <property name="label" translatable="yes">Typeid:</property>
@@ -3865,11 +3865,11 @@ I/O:</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkEntry" id="virtualport-managerid">
+                                              <widget class="GtkEntry" id="vport-managerid">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
                                                 <property name="invisible_char">●</property>
-                                                <signal name="changed" handler="on_virtualport-managerid_changed"/>
+                                                <signal name="changed" handler="on_vport_managerid_changed"/>
                                               </widget>
                                               <packing>
                                                 <property name="left_attach">1</property>
@@ -3880,7 +3880,7 @@ I/O:</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkLabel" id="virtualport-managerid-label">
+                                              <widget class="GtkLabel" id="vport-managerid-label">
                                                 <property name="visible">True</property>
                                                 <property name="xalign">1</property>
                                                 <property name="label" translatable="yes">Managerid:</property>
@@ -3909,11 +3909,11 @@ I/O:</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkEntry" id="virtualport-type">
+                                              <widget class="GtkEntry" id="vport-type">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
                                                 <property name="invisible_char">●</property>
-                                                <signal name="changed" handler="on_virtualport-type_changed"/>
+                                                <signal name="changed" handler="on_vport_type_changed"/>
                                               </widget>
                                               <packing>
                                                 <property name="left_attach">1</property>
