--- a/src/vmm-preferences.glade
+++ b/src/vmm-preferences.glade
@@ -536,6 +536,50 @@ For all domains</property>
                                 <property name="label" translatable="yes">Install Audio Device:</property>
                               </widget>
                             </child>
+
+                            <child>
+                              <widget class="GtkLabel" id="label162">
+                                <property name="visible">True</property>
+                                <property name="label" translatable="yes">Install Graphics:</property>
+                                <property name="use_underline">False</property>
+                                <property name="use_markup">False</property>
+                                <property name="justify">GTK_JUSTIFY_LEFT</property>
+                                <property name="wrap">False</property>
+                                <property name="selectable">False</property>
+                                <property name="xalign">0</property>
+                                <property name="yalign">0.5</property>
+                                <property name="xpad">0</property>
+                                <property name="ypad">0</property>
+                                <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+                                <property name="width_chars">-1</property>
+                                <property name="single_line_mode">False</property>
+                                <property name="angle">0</property>
+                              </widget>
+                              <packing>
+                                <property name="left_attach">0</property>
+                                <property name="right_attach">1</property>
+                                <property name="top_attach">2</property>
+                                <property name="bottom_attach">3</property>
+                                <property name="x_options">fill</property>
+                                <property name="y_options"></property>
+                              </packing>
+                            </child>
+                            <child>
+                              <widget class="GtkComboBox" id="prefs-graphics-type">
+                                <property name="visible">True</property>
+                                <property name="items" translatable="no">VNC
+Spice</property>
+                                <signal name="changed" handler="on_prefs_graphics_type_changed"/>
+                              </widget>
+                              <packing>
+                                <property name="left_attach">0</property>
+                                <property name="right_attach">1</property>
+                                <property name="top_attach">3</property>
+                                <property name="bottom_attach">4</property>
+                                <property name="x_padding">5</property>
+                                <property name="x_options">fill</property>
+                              </packing>
+                            </child>
                           </widget>
                         </child>
                       </widget>
