--- a/src/vmm-add-hardware.glade
+++ b/src/vmm-add-hardware.glade
@@ -954,7 +954,7 @@
                                                   <widget class="GtkLabel" id="label428">
                                                     <property name="visible">True</property>
                                                     <property name="xpad">7</property>
-                                                    <property name="label" translatable="yes">&lt;small&gt;&lt;b&gt;Tip:&lt;/b&gt; VNC or SPICE server is strongly recommended because it allows the virtual display to be embedded inside this application. It may also be used to allow access to the virtual display from a remote system.&lt;/small&gt;</property>
+                                                    <property name="label" translatable="yes">&lt;small&gt;&lt;b&gt;Tip:&lt;/b&gt; VNC or Spice server is strongly recommended because it allows the virtual display to be embedded inside this application. It may also be used to allow access to the virtual display from a remote system.&lt;/small&gt;</property>
                                                     <property name="use_markup">True</property>
                                                     <property name="wrap">True</property>
                                                   </widget>
