--- a/src/vmm-add-hardware.glade
+++ b/src/vmm-add-hardware.glade
@@ -1492,7 +1492,7 @@ to connect to the virtual machine.</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkFrame" id="frame8">
+                                          <widget class="GtkFrame" id="char-param-box">
                                             <property name="visible">True</property>
                                             <property name="label_xalign">0</property>
                                             <property name="shadow_type">none</property>
@@ -1507,7 +1507,6 @@ to connect to the virtual machine.</property>
                                                     <property name="n_rows">6</property>
                                                     <property name="n_columns">2</property>
                                                     <property name="column_spacing">8</property>
-                                                    <property name="row_spacing">8</property>
                                                     <child>
                                                       <widget class="GtkEntry" id="char-path">
                                                         <property name="visible">True</property>
@@ -1533,9 +1532,10 @@ to connect to the virtual machine.</property>
                                                       </packing>
                                                     </child>
                                                     <child>
-                                                      <widget class="GtkLabel" id="target-name-label">
+                                                      <widget class="GtkLabel" id="char-target-name-label">
                                                         <property name="visible">True</property>
                                                         <property name="xalign">0</property>
+                                                        <property name="ypad">6</property>
                                                         <property name="label" translatable="yes">Name:</property>
                                                         <property name="use_underline">True</property>
                                                         <property name="mnemonic_widget">char-use-telnet</property>
@@ -1544,7 +1544,7 @@ to connect to the virtual machine.</property>
                                                         <property name="top_attach">5</property>
                                                         <property name="bottom_attach">6</property>
                                                         <property name="x_options">GTK_FILL</property>
-                                                        <property name="y_options"></property>
+                                                        <property name="y_options">GTK_FILL</property>
                                                       </packing>
                                                     </child>
                                                     <child>
@@ -1560,12 +1560,14 @@ to connect to the virtual machine.</property>
                                                         <property name="right_attach">2</property>
                                                         <property name="top_attach">4</property>
                                                         <property name="bottom_attach">5</property>
+                                                        <property name="y_options"></property>
                                                       </packing>
                                                     </child>
                                                     <child>
                                                       <widget class="GtkLabel" id="char-use-telnet-label">
                                                         <property name="visible">True</property>
                                                         <property name="xalign">0</property>
+                                                        <property name="ypad">6</property>
                                                         <property name="label" translatable="yes">Use Te_lnet:</property>
                                                         <property name="use_underline">True</property>
                                                         <property name="mnemonic_widget">char-use-telnet</property>
@@ -1574,7 +1576,7 @@ to connect to the virtual machine.</property>
                                                         <property name="top_attach">4</property>
                                                         <property name="bottom_attach">5</property>
                                                         <property name="x_options">GTK_FILL</property>
-                                                        <property name="y_options"></property>
+                                                        <property name="y_options">GTK_FILL</property>
                                                       </packing>
                                                     </child>
                                                     <child>
@@ -1588,12 +1590,14 @@ to connect to the virtual machine.</property>
                                                         <property name="right_attach">2</property>
                                                         <property name="top_attach">1</property>
                                                         <property name="bottom_attach">2</property>
+                                                        <property name="y_options"></property>
                                                       </packing>
                                                     </child>
                                                     <child>
                                                       <widget class="GtkLabel" id="char-bind-host-label">
                                                         <property name="visible">True</property>
                                                         <property name="xalign">0</property>
+                                                        <property name="ypad">8</property>
                                                         <property name="label" translatable="yes">_Bind Host:</property>
                                                         <property name="use_underline">True</property>
                                                         <property name="mnemonic_widget">char-host</property>
@@ -1608,6 +1612,7 @@ to connect to the virtual machine.</property>
                                                       <widget class="GtkLabel" id="char-path-label">
                                                         <property name="visible">True</property>
                                                         <property name="xalign">0</property>
+                                                        <property name="ypad">8</property>
                                                         <property name="label" translatable="yes">_Path:</property>
                                                         <property name="use_underline">True</property>
                                                         <property name="mnemonic_widget">char-path</property>
@@ -1620,6 +1625,7 @@ to connect to the virtual machine.</property>
                                                       <widget class="GtkLabel" id="char-host-label">
                                                         <property name="visible">True</property>
                                                         <property name="xalign">0</property>
+                                                        <property name="ypad">8</property>
                                                         <property name="label" translatable="yes">H_ost:</property>
                                                         <property name="use_underline">True</property>
                                                         <property name="mnemonic_widget">char-host</property>
@@ -1728,6 +1734,7 @@ to connect to the virtual machine.</property>
                                                       <widget class="GtkLabel" id="char-mode-label">
                                                         <property name="visible">True</property>
                                                         <property name="xalign">0</property>
+                                                        <property name="ypad">8</property>
                                                         <property name="label" translatable="yes">_Mode:</property>
                                                         <property name="use_underline">True</property>
                                                         <property name="mnemonic_widget">char-mode</property>
@@ -1793,7 +1800,6 @@ to connect to the virtual machine.</property>
                                 </child>
                               </widget>
                               <packing>
-                                <property name="expand">False</property>
                                 <property name="position">0</property>
                               </packing>
                             </child>
